syntax = "proto3";

package discordpackage;

import "member.proto";

enum GrpcMessageEventType {
  MESSAGE_EVENT_TYPE_UNSPECIFIED = 0;
  MESSAGE_EVENT_TYPE_ADD = 1;
  MESSAGE_EVENT_TYPE_EDIT = 2;
}

message GrpcMessageEvent {
  GrpcMessageEventType type = 1;
  GrpcMessage message = 2;
}

message GrpcMessage {
  string message_id = 1;
  optional string content = 2;
  optional string file_url = 3;
  string channel_id = 4;
  string created_at = 5;
  string updated_at = 6;
  optional string deleted_at = 7;
  optional string deleted_by = 8;
  GrpcMemberProfile author = 9;
}